--- a/view/HTML/main.html
+++ b/view/HTML/main.html
@@ -2,12 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../CSS/style.css">
     <title>TV</title>
 </head>
 <body>
-    <h1>Hello, world!</h1>
-    <button id="btn">This is button</button>
-    <script src="script.js"></script>
+<script src="../JS/script.js"></script>
 </body>
 </html>
