Add MVC decomposition and few custom errors

--- a/view/HTML/main.html
+++ b/view/HTML/main.html
@@ -6,6 +6,11 @@
     <title>TV</title>
 </head>
 <body>
-<script src="../JS/script.js"></script>
+
+<div class=".header">
+    <p>This is header!</p>
+</div>
+
+<script src="../JS/main_page_script.js"></script>
 </body>
 </html>
