--- a/view/CSS/style.css
+++ b/view/CSS/style.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body, html {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
@@ -5,3 +9,26 @@ body, html {
     height: 100%;
     padding: 0;
 }
+
+.header {
+    padding: 1%;
+    background-color: #7bdbff;
+    overflow: hidden;
+}
+
+.header > button {
+    margin-right: .5%;
+    border: none;
+    padding: .2% .5%;
+    font-size: 16px;
+    text-align: center;
+}
+
+button {
+    cursor: pointer;
+}
+
+.right {
+    float: right;
+}
+
