--- a/view/HTML/main.html
+++ b/view/HTML/main.html
@@ -7,8 +7,9 @@
 </head>
 <body>
 
-<div class=".header">
-    <p>This is header!</p>
+<div class="header">
+    <button class="right" id="logOutBtn">Выход</button>
+    <button class="right" id="helpBtn">Помощь</button>
 </div>
 
 <script src="../JS/main_page_script.js"></script>
