--- a/view/CSS/style.css
+++ b/view/CSS/style.css
@@ -12,13 +12,14 @@ body, html {
 
 .header {
     padding: 1%;
-    background-color: #7bdbff;
     overflow: hidden;
+    border-style: none none solid none;
+    border-width: 1px;
+    border-color: #6e6b6b;
 }
 
 .header > button {
     margin-right: .5%;
-    border: none;
     padding: .2% .5%;
     font-size: 16px;
     text-align: center;
@@ -32,3 +33,24 @@ button {
     float: right;
 }
 
+.album-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    grid-gap: 10% .5%;
+    padding: .5%;
+}
+
+.album {
+    box-shadow: 1px 2px 2px 1px rgba(0, 0, 0, 0.2);
+    padding: .2% .5%;
+    font-size: 24px;
+    cursor: pointer;
+    text-align: center;
+}
+
+@media screen and (max-width: 900px) {
+    .album-grid {
+        grid-gap: .5%;
+        grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+    }
+}
