Add some styles

--- a/view/HTML/main.html
+++ b/view/HTML/main.html
@@ -8,8 +8,8 @@
 <body>
 
 <div class="header">
-    <button class="right" id="logOutBtn">Выход</button>
-    <button class="right" id="helpBtn">Помощь</button>
+    <button class="right btn" id="logOutBtn">Выход</button>
+    <button class="right btn" id="helpBtn">Помощь</button>
 </div>
 
 
