--- a/view/HTML/main.html
+++ b/view/HTML/main.html
@@ -11,8 +11,14 @@
     <button class="right btn" id="logOutBtn">Выход</button>
     <button class="right btn" id="helpBtn">Помощь</button>
 </div>
-
-
+<div class="container">
+    <div>
+        <button class="btn">Альбомы</button>
+        <br>
+        <br>
+        <button class="btn">Объявления</button>
+    </div>
+</div>
 
 <script src="../JS/main_page_script.js"></script>
 </body>
