--- a/view/HTML/main.html
+++ b/view/HTML/main.html
@@ -12,11 +12,9 @@
     <button class="right btn" id="helpBtn">Помощь</button>
 </div>
 <div class="container">
-    <div>
-        <button class="btn">Альбомы</button>
-        <br>
-        <br>
-        <button class="btn">Объявления</button>
+    <div class="section-list">
+        <button class="btn" id="section-0">Альбомы</button>
+        <button class="btn" id="section-1">Объявления</button>
     </div>
 </div>
 
