--- a/view/HTML/main.html
+++ b/view/HTML/main.html
@@ -18,6 +18,6 @@
     </div>
 </div>
 
-<script src="../JS/main_page_script.js"></script>
+<script src="/static/JS/main_page_script.js"></script>
 </body>
 </html>
