--- a/view/HTML/main.html
+++ b/view/HTML/main.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="/static/CSS/style.css">
     <title>TV</title>
 </head>
 <body>
