Added some styles and update readme

--- a/view/HTML/main.html
+++ b/view/HTML/main.html
@@ -8,8 +8,8 @@
 <body>
 
 <div class="header">
-    <button class="right btn" id="logOutBtn">Выход</button>
-    <button class="right btn" id="helpBtn">Помощь</button>
+    <button class="right btn info" id="logOutBtn">Выход</button>
+    <button class="right btn info" id="helpBtn">Помощь</button>
 </div>
 <div class="container">
     <div class="section-list">
@@ -18,6 +18,6 @@
     </div>
 </div>
 
-<script src="/static/JS/main_page_script.js"></script>
+<script src="/static/JS/main_page_script.js" type="module"></script>
 </body>
 </html>
