--- a/view/CSS/style.css
+++ b/view/CSS/style.css
@@ -13,9 +13,7 @@ body, html {
 .header {
     padding: 1%;
     overflow: hidden;
-    border-style: none none solid none;
-    border-width: 1px;
-    border-color: #6e6b6b;
+    background-color: #f1f1f1;;
 }
 
 .header > button {
@@ -36,6 +34,7 @@ button {
 .container {
     display: grid;
     grid-template-columns: 20% 80%;
+    margin-top: .5%;
 }
 
 
@@ -76,9 +75,19 @@ button {
     padding: 12px;
 }
 
+.btn.danger:hover {
+    background-color: #e30000;
+}
+
+.btn.info:hover {
+    background-color: #006edb;
+    color: white;
+}
+
 .btn:hover {
     background-color: #ddd;
 }
+
 
 @media screen and (max-width: 900px) {
     .album-grid {
