--- a/view/HTML/main.html
+++ b/view/HTML/main.html
@@ -3,30 +3,41 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <link rel="stylesheet" href="/static/CSS/style.css">
-    <title>TV</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.5.5/dist/css/uikit.min.css" />
+
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.5.5/dist/js/uikit.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/uikit@3.5.5/dist/js/uikit-icons.min.js"></script>
+
+
+    <title>Document</title>
 </head>
 
 <body>
-
-    <div class="header">
-        <button class="right btn info" id="logOutBtn">Выход</button>
-        <button class="right btn info" id="helpBtn">Помощь</button>
-    </div>
-    <div id='main'>
-        <div class="col-sm-2">
-            <div class="list-group">
-                <a id="section-0" class="list-group-item list-group-item-action">Создать</a>
-                <a id="section-1" class="list-group-item list-group-item-action">Альбомы</a>
-                <a id="section-1" class="list-group-item list-group-item-action">Объявления</a>
-            </div>
+    <nav class="uk-navbar-container" uk-navbar>
+        <div class="uk-navbar-left">
+            <ul class="uk-navbar-nav">
+                <li>
+                    <a>Создать</a>
+                    <div class="uk-navbar-dropdown" uk-dropdown="mode: click">
+                        <ul class="uk-nav uk-navbar-dropdown-nav">
+                            <li><a>Альбом <span uk-icon="icon: folder"></span></a></li>
+                            <li><a>Объявление <span uk-icon="icon: file-text"></span></a></li>
+                        </ul>
+                    </div>
+                </li>
+            </ul>
         </div>
-    </div>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-    <script src="/static/JS/main_page_script.js" type="module"></script>
+        <div class="uk-navbar-right">
+            <ul class="uk-navbar-nav">
+                <li>
+                    <a id="logOutBtn">Выход</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <script src="/static/JS/main.js"></script>
 </body>
 
 </html>
