--- a/view/HTML/login.html
+++ b/view/HTML/login.html
@@ -5,20 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/static/CSS/login.css">
+    <link rel="stylesheet" href="/static/uikit/css/uikit.min.css" />
+
+    <script src="/static/uikit/js/uikit.min.js"></script>
+    <script src="/static/uikit/js/uikit-icons.min.js"></script>
+
     <title>Document</title>
 </head>
 
 <body>
-    <div class="outer">
-        <div class="login-form">
-            <div>Авторизиуйтесь, чтобы начать работать</div>
-            <input type="text" placeholder="Имя" id="userName">
-            <input type="password" placeholder="Пароль" id="userPassword">
-            <button id="logInBtn">Авторизироваться</button>
+    <div class="uk-align-center uk-container-xsmall uk-margin-xlarge-top">
+        <div class="uk-margin">
+            <h1 class="uk-heading-divider">Войдите в систему</h1>
         </div>
+        <div class="uk-margin">
+            <input id="userName" class="uk-input" type="text">
+        </div>
+
+        <div class="uk-margin">
+            <input id="userPassword" class="uk-input" type="password">
+        </div>
+
+        <button id="logInBtn" class="uk-button uk-button-primary uk-align-right">Авторизироваться</button>
     </div>
-    
+
     <script src="/static/JS/login.js"></script>
 </body>
 
