--- a/view/HTML/main.html
+++ b/view/HTML/main.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.5.5/dist/css/uikit.min.css" />
+    <link rel="stylesheet" href="/static/uikit/css/uikit.min.css" />
 
-    <script src="https://cdn.jsdelivr.net/npm/uikit@3.5.5/dist/js/uikit.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/uikit@3.5.5/dist/js/uikit-icons.min.js"></script>
+    <script src="/static/uikit/js/uikit.min.js"></script>
+    <script src="/static/uikit/js/uikit-icons.min.js"></script>
 
 
     <title>Document</title>
@@ -21,7 +21,28 @@
                     <a>Создать</a>
                     <div class="uk-navbar-dropdown" uk-dropdown="mode: click">
                         <ul class="uk-nav uk-navbar-dropdown-nav">
-                            <li><a>Альбом <span uk-icon="icon: folder"></span></a></li>
+                            <li><a href="#createAlbum" uk-toggle>Альбом <span uk-icon="icon: folder"></span></a>
+                                <div id="createAlbum" uk-modal>
+                                    <div class="uk-modal-dialog uk-margin-auto-vertical uk-modal-body">
+                                        <button class="uk-modal-close-default" type="button" uk-close></button>
+                                        <h2 class="uk-modal-title">Создайте новый альбом</h2>
+                                        <div class="uk-align-center uk-container-xsmall uk-margin-small-top">
+                                            <div class="uk-margin">
+                                                <span>Название</span>
+                                                <input id="newAlbumName" class="uk-input" type="text">
+                                            </div>
+
+                                            <div class="uk-margin">
+                                                <span>Дата удаления</span>
+                                                <input id="newAlbumDate" class="uk-input" type="date">
+                                            </div>
+
+                                            <button id="createAlbumBtn"
+                                                class="uk-button uk-button-primary uk-align-right">Созадть</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
                             <li><a>Объявление <span uk-icon="icon: file-text"></span></a></li>
                         </ul>
                     </div>
