--- a/view/HTML/a.html
+++ b/view/HTML/a.html
@@ -3,24 +3,73 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/static/CSS/style.css">
-    <title>TV</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/static/uikit/css/uikit.min.css" />
+
+    <script src="/static/uikit/js/uikit.min.js"></script>
+    <script src="/static/uikit/js/uikit-icons.min.js"></script>
+
+
+    <title>Document</title>
 </head>
 
 <body>
+    <nav class="uk-navbar-container" uk-navbar>
+        <div class="uk-navbar-left">
+            <ul class="uk-navbar-nav">
+                <li>
 
-    <div class="header">
-        <button class="right btn info" id="logOutBtn">Выход</button>
-        <button class="right btn info" id="helpBtn">Помощь</button>
-    </div>
-    <div class='container'>
-        <div class="section-list">
-            <button id="section-0" class="btn info">Создать</button>
-            <button id="section-1" class="btn info">Альбомы</button>
-            <button id="section-2" class="btn info">Объявления</button>
+                </li>
+            </ul>
+        </div>
+        <div class="uk-navbar-right">
+            <ul class="uk-navbar-nav">
+                <li>
+                    <a id="logOutBtn">Выход</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <div id="main">
+        <div class="uk-width-1-6">
+            <ul class="uk-list uk-margin">
+                <li>
+                    <button class="uk-button uk-button-primary">Создать</button>
+                    <div class=" uk-navbar-dropdown" uk-dropdown="mode: click">
+                        <ul class="uk-nav uk-navbar-dropdown-nav">
+                            <li><a href="#createAlbum" uk-toggle>Альбом <span uk-icon="icon: folder"></span></a>
+                                <div id="createAlbum" uk-modal>
+                                    <div class="uk-modal-dialog uk-margin-auto-vertical uk-modal-body">
+                                        <button class="uk-modal-close-default " type="button" uk-close></button>
+                                        <h2 class="uk-modal-title">Создайте новый альбом</h2>
+                                        <div class="uk-align-center uk-container-xsmall uk-margin-small-top">
+                                            <div class="uk-margin">
+                                                <span>Название</span>
+                                                <input id="newAlbumName" class="uk-input" type="text">
+                                            </div>
+
+                                            <div class="uk-margin">
+                                                <span>Дата удаления</span>
+                                                <input id="newAlbumDate" class="uk-input" type="date">
+                                            </div>
+
+                                            <button id="createAlbumBtn" class="uk-button uk-button-primary uk-align-right">Созадть</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                            <li><a>Объявление <span uk-icon="icon: file-text "></span></a></li>
+                        </ul>
+                    </div>
+                </li>
+                <li>Альбомы</li>
+                <li>Объявления</li>
+            </ul>
         </div>
     </div>
-    <script src="/static/JS/main_page_script.js" type="module"></script>
+
+    <script src="/static/JS/main.js "></script>
 </body>
 
 </html>
