--- a/view/HTML/main.html
+++ b/view/HTML/main.html
@@ -37,15 +37,20 @@
                                         <div class="uk-align-center uk-container-xsmall uk-margin-small-top">
                                             <div class="uk-margin">
                                                 <span>Название</span>
-                                                <input id="newAlbumName" class="uk-input" type="text">
+                                                <input  onkeyup="checkTextInput(this, 200, 'createAlbumBtn')" id="newAlbumName" class="uk-input" type="text">
+                                            </div>
+
+                                            <div class="uk-margin">
+                                                <span>Комментарий</span>
+                                                <input  onkeyup="checkTextInput(this, 300, 'createAlbumBtn')" id="newAlbumComment" class="uk-input" type="text">
                                             </div>
 
                                             <div class="uk-margin">
                                                 <span>Дата удаления</span>
-                                                <input id="newAlbumDate" class="uk-input" type="date">
+                                                <input onchange="checkDateInput(this, 'createAlbumBtn')" id="newAlbumDate" class="uk-input" type="date">
                                             </div>
 
-                                            <button id="createAlbumBtn" class="uk-button uk-button-primary uk-align-right">Создать</button>
+                                            <button id="createAlbumBtn" disabled onclick="createNewAlbum()" class="uk-button uk-button-primary uk-align-right">Создать</button>
                                         </div>
                                     </div>
                                 </div>
@@ -83,7 +88,6 @@
             </ul>
         </div>
         <div class="uk-width-5-6 uk-margin-left" id="mainField">
-
         </div>
     </div>
 
