--- a/view/HTML/main.html
+++ b/view/HTML/main.html
@@ -10,7 +10,20 @@
     <title>ТВ</title>
 </head>
 
+
 <body>
+
+    <style>
+        body,
+        html {
+            margin: 0;
+            font-family: Arial, Helvetica, sans-serif;
+            width: 100%;
+            height: 100%;
+            padding: 0;
+        }
+    </style>
+
     <nav class="uk-navbar-container" uk-navbar>
         <div class="uk-navbar-right">
             <ul class="uk-navbar-nav">
@@ -21,12 +34,13 @@
         </div>
     </nav>
 
-    <div id="main" class="uk-padding uk-flex uk-flex-middle">
-        <div class=" uk-width-1-6">
+    <div id="main" uk-grid class="uk-padding">
+        <div class="uk-width-1-5">
             <ul class="uk-list">
                 <li>
                     <button class="uk-button uk-button-primary uk-width-1-1">Создать...</button>
-                    <div uk-dropdown="mode: click;  pos: bottom-justify; boundary: .boundary-align; boundary-align: true">
+                    <div
+                        uk-dropdown="mode: click;  pos: bottom-justify; boundary: .boundary-align; boundary-align: true">
                         <ul class="uk-nav uk-dropdown-nav">
                             <li>
                                 <a href="#createAlbum" uk-toggle>Альбом <span uk-icon="icon: folder"></span></a>
@@ -37,20 +51,24 @@
                                         <div class="uk-align-center uk-container-xsmall uk-margin-small-top">
                                             <div class="uk-margin">
                                                 <span>Название</span>
-                                                <input  onkeyup="checkTextInput(this, 200, 'createAlbumBtn')" id="newAlbumName" class="uk-input" type="text">
+                                                <input onkeyup="checkTextInput(this, 200, 'createAlbumBtn')"
+                                                    id="newAlbumName" class="uk-input" type="text">
                                             </div>
 
                                             <div class="uk-margin">
                                                 <span>Комментарий</span>
-                                                <input  onkeyup="checkTextInput(this, 300, 'createAlbumBtn')" id="newAlbumComment" class="uk-input" type="text">
+                                                <input onkeyup="checkTextInput(this, 300, 'createAlbumBtn')"
+                                                    id="newAlbumComment" class="uk-input" type="text">
                                             </div>
 
                                             <div class="uk-margin">
                                                 <span>Дата удаления</span>
-                                                <input onchange="checkDateInput(this, 'createAlbumBtn')" id="newAlbumDate" class="uk-input" type="date">
+                                                <input onchange="checkDateInput(this, 'createAlbumBtn')"
+                                                    id="newAlbumDate" class="uk-input" type="date">
                                             </div>
 
-                                            <button id="createAlbumBtn" disabled onclick="createNewAlbum()" class="uk-button uk-button-primary uk-align-right">Создать</button>
+                                            <button id="createAlbumBtn" disabled onclick="createNewAlbum()"
+                                                class="uk-button uk-button-primary uk-align-right">Создать</button>
                                         </div>
                                     </div>
                                 </div>
@@ -64,7 +82,8 @@
                                         <div class="uk-align-center uk-container-xsmall uk-margin-small-top">
                                             <div class="uk-margin">
                                                 <span>Содержимое</span>
-                                                <textarea id="newTextContent" class="uk-textarea" style="resize: none;"></textarea>
+                                                <textarea id="newTextContent" class="uk-textarea"
+                                                    style="resize: none;"></textarea>
                                             </div>
 
                                             <div class="uk-margin">
@@ -72,7 +91,8 @@
                                                 <input id="newTextDate" class="uk-input" type="date">
                                             </div>
 
-                                            <button id="createTextBtn" class="uk-button uk-button-primary uk-align-right">Созадть</button>
+                                            <button id="createTextBtn"
+                                                class="uk-button uk-button-primary uk-align-right">Созадть</button>
                                         </div>
                                     </div>
                                 </div>
@@ -87,7 +107,18 @@
                 <li><button class="uk-button uk-button-default uk-width-1-1">Объявления</button></li>
             </ul>
         </div>
-        <div class="uk-width-5-6 uk-margin-left" id="mainField">
+        <div class="uk-width-4-5" id="mainField">
+        </div>
+    </div>
+
+    <div id="changeObjModal" uk-modal>
+        <div class="uk-modal-dialog uk-margin-auto-vertical uk-modal-body">
+            <button class="uk-modal-close-default " type="button" uk-close></button>
+            <div class="uk-margin">
+                <span></span>
+                <input class="uk-input">
+            </div>
+            <button id="saveObjChanges" disabled class="uk-button uk-button-primary uk-align-right">Сохранить</button>
         </div>
     </div>
 
