--- a/view/HTML/main.html
+++ b/view/HTML/main.html
@@ -39,8 +39,7 @@
             <ul class="uk-list">
                 <li>
                     <button class="uk-button uk-button-primary uk-width-1-1">Создать...</button>
-                    <div
-                        uk-dropdown="mode: click;  pos: bottom-justify; boundary: .boundary-align; boundary-align: true">
+                    <div uk-dropdown="mode: click;  pos: bottom-justify; boundary: .boundary-align; boundary-align: true">
                         <ul class="uk-nav uk-dropdown-nav">
                             <li>
                                 <a href="#createAlbum" uk-toggle>Альбом <span uk-icon="icon: folder"></span></a>
@@ -51,24 +50,20 @@
                                         <div class="uk-align-center uk-container-xsmall uk-margin-small-top">
                                             <div class="uk-margin">
                                                 <span>Название</span>
-                                                <input onkeyup="checkTextInput(this, 200, 'createAlbumBtn')"
-                                                    id="newAlbumName" class="uk-input" type="text">
+                                                <input onkeyup="checkTextInput(this, 200, 'createAlbumBtn')" id="newAlbumName" class="uk-input" type="text">
                                             </div>
 
                                             <div class="uk-margin">
                                                 <span>Комментарий</span>
-                                                <input onkeyup="checkTextInput(this, 300, 'createAlbumBtn')"
-                                                    id="newAlbumComment" class="uk-input" type="text">
+                                                <input onkeyup="checkTextInput(this, 300, 'createAlbumBtn')" id="newAlbumComment" class="uk-input" type="text">
                                             </div>
 
                                             <div class="uk-margin">
                                                 <span>Дата удаления</span>
-                                                <input onchange="checkDateInput(this, 'createAlbumBtn')"
-                                                    id="newAlbumDate" class="uk-input" type="date">
+                                                <input onchange="checkDateInput(this, 'createAlbumBtn')" id="newAlbumDate" class="uk-input" type="date">
                                             </div>
 
-                                            <button id="createAlbumBtn" disabled onclick="createNewAlbum()"
-                                                class="uk-button uk-button-primary uk-align-right">Создать</button>
+                                            <button id="createAlbumBtn" disabled onclick="createNewAlbum()" class="uk-button uk-button-primary uk-align-right">Создать</button>
                                         </div>
                                     </div>
                                 </div>
@@ -82,8 +77,7 @@
                                         <div class="uk-align-center uk-container-xsmall uk-margin-small-top">
                                             <div class="uk-margin">
                                                 <span>Содержимое</span>
-                                                <textarea id="newTextContent" class="uk-textarea"
-                                                    style="resize: none;"></textarea>
+                                                <textarea id="newTextContent" class="uk-textarea" style="resize: none;"></textarea>
                                             </div>
 
                                             <div class="uk-margin">
@@ -91,8 +85,7 @@
                                                 <input id="newTextDate" class="uk-input" type="date">
                                             </div>
 
-                                            <button id="createTextBtn"
-                                                class="uk-button uk-button-primary uk-align-right">Созадть</button>
+                                            <button id="createTextBtn" class="uk-button uk-button-primary uk-align-right">Созадть</button>
                                         </div>
                                     </div>
                                 </div>
@@ -118,7 +111,7 @@
                 <span></span>
                 <input class="uk-input">
             </div>
-            <button id="saveObjChanges" disabled class="uk-button uk-button-primary uk-align-right">Сохранить</button>
+            <button id="saveObjChanges" class="uk-button uk-button-primary uk-align-right">Сохранить</button>
         </div>
     </div>
 
