--- a/view/HTML/main.html
+++ b/view/HTML/main.html
@@ -77,15 +77,15 @@
                                         <div class="uk-align-center uk-container-xsmall uk-margin-small-top">
                                             <div class="uk-margin">
                                                 <span>Содержимое</span>
-                                                <textarea id="newTextContent" class="uk-textarea" style="resize: none;"></textarea>
+                                                <textarea onkeyup="checkTextInput(this, 500, 'createTextBtn')" id="newTextContent" class="uk-textarea" style="resize: none;"></textarea>
                                             </div>
 
                                             <div class="uk-margin">
                                                 <span>Дата удаления</span>
-                                                <input id="newTextDate" class="uk-input" type="date">
+                                                <input onchange="checkDateInput(this, 'createTextBtn')" id="newTextDate" class="uk-input" type="date">
                                             </div>
 
-                                            <button id="createTextBtn" class="uk-button uk-button-primary uk-align-right">Созадть</button>
+                                            <button id="createTextBtn" disabled onclick="createNewText()" class="uk-button uk-button-primary uk-align-right">Созадть</button>
                                         </div>
                                     </div>
                                 </div>
@@ -96,8 +96,8 @@
                 <li>
                     <h2 class="uk-heading">Выберите раздел</h2>
                 </li>
-                <li><button class="uk-button uk-button-default uk-width-1-1">Альбомы</button></li>
-                <li><button class="uk-button uk-button-default uk-width-1-1">Объявления</button></li>
+                <li><button onclick="showAlbums()" class="uk-button uk-button-default uk-width-1-1">Альбомы</button></li>
+                <li><button onclick="showTexts()" class="uk-button uk-button-default uk-width-1-1">Объявления</button></li>
             </ul>
         </div>
         <div class="uk-width-4-5" id="mainField">
