Okay i broke something, dunno what

--- a/view/html/login.html
+++ b/view/html/login.html
@@ -29,7 +29,7 @@
         <button id="logInBtn" class="uk-button uk-button-primary uk-align-right">Авторизироваться</button>
     </div>
 
-    <script src="/static/JS/login.js"></script>
+    <script src="/static/js/login.js"></script>
 </body>
 
 </html>
