--- a/view/html/main.html
+++ b/view/html/main.html
@@ -51,13 +51,13 @@
                                         <div class="uk-align-center uk-container-xsmall uk-margin-small-top">
                                             <div class="uk-margin">
                                                 <span>Название</span>
-                                                <input onkeyup="checkTextInput(this, 200, 'createAlbumBtn')"
+                                                <input onkeyup="checkTextInput(this, 64, 'createAlbumBtn')"
                                                     id="newAlbumName" class="uk-input" type="text">
                                             </div>
 
                                             <div class="uk-margin">
                                                 <span>Комментарий</span>
-                                                <input onkeyup="checkTextInput(this, 300, 'createAlbumBtn')"
+                                                <input onkeyup="checkTextInput(this, 256, 'createAlbumBtn')"
                                                     id="newAlbumComment" class="uk-input" type="text">
                                             </div>
 
@@ -82,7 +82,7 @@
                                         <div class="uk-align-center uk-container-xsmall uk-margin-small-top">
                                             <div class="uk-margin">
                                                 <span>Содержимое</span>
-                                                <textarea onkeyup="checkTextInput(this, 500, 'createTextBtn')"
+                                                <textarea onkeyup="checkTextInput(this, 512, 'createTextBtn')"
                                                     id="newTextContent" class="uk-textarea"
                                                     style="resize: none;"></textarea>
                                             </div>
@@ -120,13 +120,12 @@
             <button class="uk-modal-close-default " type="button" uk-close></button>
             <div class="uk-margin">
                 <span></span>
-                <input class="uk-input">
             </div>
             <button id="change-object-save-button" class="uk-button uk-button-primary uk-align-right">Сохранить</button>
         </div>
     </div>
 
-    <script src="/static/JS/main.js"></script>
+    <script src="/static/js/main.js"></script>
 
 </body>
 
