Hide file input

--- a/view/html/main.html
+++ b/view/html/main.html
@@ -116,7 +116,7 @@
         </div>
     </div>
 
-    <input type="file" multiple id='file-upload'>
+    <input type="file" multiple id='file-upload' style="display: none;">
     <script src="/static/js/main.js"></script>
 
 </body>
