--- a/view/html/main.html
+++ b/view/html/main.html
@@ -28,7 +28,7 @@
         <div class="uk-navbar-right">
             <ul class="uk-navbar-nav">
                 <li>
-                    <a id="logOutBtn">Выход</a>
+                    <a id="log-out-btn" onclick="logOut()">Выход</a>
                 </li>
             </ul>
         </div>
@@ -50,20 +50,20 @@
                                         <div class="uk-align-center uk-container-xsmall uk-margin-small-top">
                                             <div class="uk-margin">
                                                 <span>Название</span>
-                                                <input onkeyup="checkTextInput(this, 64, 'createAlbumBtn')" id="newAlbumName" class="uk-input" type="text">
+                                                <input onkeyup="checkAlbumCreationModal()" class="uk-input" type="text">
                                             </div>
 
                                             <div class="uk-margin">
                                                 <span>Комментарий</span>
-                                                <input onkeyup="checkTextInput(this, 256, 'createAlbumBtn')" id="newAlbumComment" class="uk-input" type="text">
+                                                <input onkeyup="checkAlbumCreationModal()" class="uk-input" type="text">
                                             </div>
 
                                             <div class="uk-margin">
                                                 <span>Дата удаления</span>
-                                                <input onchange="checkDateInput(this, 'createAlbumBtn')" id="newAlbumDate" class="uk-input" type="date">
+                                                <input onchange="checkAlbumCreationModal()" class="uk-input" type="date">
                                             </div>
 
-                                            <button id="createAlbumBtn" disabled onclick="createNewAlbum()" class="uk-button uk-button-primary uk-align-right">Создать</button>
+                                            <button disabled onclick="createNewAlbum()" class="uk-button uk-button-primary uk-align-right">Создать</button>
                                         </div>
                                     </div>
                                 </div>
