Tested everything except file hiding

--- a/view/html/main.html
+++ b/view/html/main.html
@@ -81,7 +81,7 @@
                                         <div class="uk-align-center uk-container-xsmall uk-margin-small-top">
                                             <div class="uk-margin">
                                                 <span>Содержимое</span>
-                                                <textarea onkeyup="checkTextCreationModel()" id="new-text-content" class="uk-textarea" style="resize: none;"></textarea>
+                                                <textarea onkeyup="checkTextCreationModel()" rows="5" id="new-text-content" class="uk-textarea" style="resize: none;"></textarea>
                                             </div>
 
                                             <div class="uk-margin">
