panel shows albums and texts

--- a/view/html/panel.html
+++ b/view/html/panel.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/static/css/panel.css">
     <title>Панель</title>
 </head>
 <body>
@@ -11,16 +12,16 @@
     <div class="container">
         <div class="media">
             <img id="img">
-            <video id="vid" onloadstart="this.volume=0" autoplay onended="continueSlideShow()"></video>
+            <video id="vid" onloadstart="this.volume=0" autoplay onended="albumSlide.continueSlideShow()"></video>
         </div>
         <div class="rightBlock">
             <p id="day"></p>
             <p id="holyday"></p>
         </div>
     </div>
-    <div class="marquee" onanimationend="changeAnnouncment()"></div>
+   <div class="marquee" onanimationend="textMarquee.changeText()"></div>
 
-    <script src="../static/js/panel.js"></script>
+    <script src="/static/js/panel.js"></script>
 </div>
 </body>
 </html>
