Start testing events

--- a/view/html/panel.html
+++ b/view/html/panel.html
@@ -16,7 +16,7 @@
         </div>
         <div class="rightBlock">
             <p id="day"></p>
-            <p id="holyday"></p>
+            <p id="event"></p>
         </div>
     </div>
    <div class="marquee" onanimationend="textMarquee.changeText()"></div>
