--- a/view/html/panel.html
+++ b/view/html/panel.html
@@ -11,8 +11,9 @@
     <div id="comment"></div>
     <div class="container">
         <div class="media">
-            <img id="img">
-            <video id="vid" onloadstart="this.volume=0" autoplay onended="albumSlide.continueSlideShow()"></video>
+           <img id="img">
+           <video id="vid" onloadstart="this.volume=0" autoplay onended="albumSlide.continueSlideShow()"></video>
+            <!-- <iframe id="media" all></iframe> -->
         </div>
         <div class="rightBlock">
             <p id="day"></p>
